deploy/swagger-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
  namespace: ebpf-project
  labels:
    app.kubernetes.io/name: swagger-ui
    app.kubernetes.io/component: api-docs
    app.kubernetes.io/part-of: ebpf-project
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: swagger-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
